--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,14 +1,23 @@
-<p style="color: green"><%= notice %></p>
+<p id="notice"><%= notice %></p>
 
-<h1>Friends</h1>
+<table class="table table-dark table-striped">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Twitter</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+    <% @friends.each do |friend| %>
+      <%= render friend %>
+    <% end %>
+    </tr>
+  </tbody>
+</table>
 
-<div id="friends">
-  <% @friends.each do |friend| %>
-    <%= render friend %>
-    <p>
-      <%= link_to "Show this friend", friend %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New friend", new_friend_path %>
+<%= link_to 'New Friend', new_friend_path, class:"btn btn-primary" %>
