--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,10 +1,21 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @friend %>
-
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title"><%= @friend.first_name %> <%= @friend.last_name %></h5>
+    <h6 class="card-subtitle mb-2 text-muted"><%= @friend.email %></h6>
+    <p>
+      <strong>Phone:</strong>
+      <%= @friend.phone %>
+    </p>
+    <p>
+      <strong>Twitter:</strong>
+      <%= @friend.twitter %>
+    </p>
+  </div>
+</div>
 <div>
-  <%= link_to "Edit this friend", edit_friend_path(@friend) %> |
-  <%= link_to "Back to friends", friends_path %>
-
-  <%= button_to "Destroy this friend", @friend, method: :delete %>
+  <%= link_to "Edit this friend", edit_friend_path(@friend), class:"btn btn-info" %> |
+  <%= link_to "Back to friends", friends_path, class:"btn btn-warning" %>
+  <%= button_to "Destroy this friend", @friend, method: :delete, class:"btn btn-danger" %>
 </div>
