--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -11,32 +11,27 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :first_name, style: "display: block" %>
-    <%= form.text_field :first_name %>
+  <div class="field form-group">
+    <%= form.text_field :first_name, class:"mt-3 form-control", placeholder:"First Name" %>
   </div>
 
-  <div>
-    <%= form.label :last_name, style: "display: block" %>
-    <%= form.text_field :last_name %>
+  <div class="field form-group">
+    <%= form.text_field :last_name, class:"mt-3 form-control", placeholder:"Last Name" %>
   </div>
 
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
+  <div class="field form-group">
+    <%= form.text_field :email, class:"mt-3 form-control", placeholder:"Email" %>
   </div>
 
-  <div>
-    <%= form.label :phone, style: "display: block" %>
-    <%= form.text_field :phone %>
+  <div class="field form-group">
+    <%= form.text_field :phone, class:"mt-3 form-control", placeholder:"Phone Number" %>
   </div>
 
-  <div>
-    <%= form.label :twitter, style: "display: block" %>
-    <%= form.text_field :twitter %>
+  <div class="field form-group">
+    <%= form.text_field :twitter, class:"mt-3 form-control", placeholder:"Twitter" %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="field form-group">
+    <%= form.submit class:"mt-3 btn btn-primary" %>
   </div>
 <% end %>
