--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,5 +1,4 @@
 <div class="alert alert-primary alert-dismissible fade show" role="alert">
-    <% notice %>
-  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+    <%= notice %>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
